Fixed z-index ordering of the layers

--- a/src/Bluent.UI/Styles/Components/_drawer.scss
+++ b/src/Bluent.UI/Styles/Components/_drawer.scss
@@ -3,6 +3,7 @@
 
 .bui-drawer {
   position: fixed;
+  z-index: var(--zIndexDrawer);
   width: 320px;
   max-width: 100vw;
   background-color: var(--colorNeutralBackground1);
