--- a/src/Bluent.UI/Styles/Components/_toast.scss
+++ b/src/Bluent.UI/Styles/Components/_toast.scss
@@ -1,4 +1,5 @@
 ﻿.bui-toast-stack {
+    z-index: var(--zIndexToast);
     position: absolute;
     display: flex;
     padding: 20px;
